--- a/selenium/selenium.csproj
+++ b/selenium/selenium.csproj
@@ -8,6 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="DotNetSeleniumExtras.PageObjects.Core" Version="4.0.1" />
+        <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
         <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
         <PackageReference Include="JetBrains.dotCover.CommandLineTools" Version="2021.3.1">
           <PrivateAssets>all</PrivateAssets>
@@ -20,7 +22,9 @@
         <PackageReference Include="NuGet.Frameworks" Version="6.0.0" />
         <PackageReference Include="NUnit" Version="3.13.2" />
         <PackageReference Include="coverlet.collector" Version="3.0.3" />
+        <PackageReference Include="Selenium.Support" Version="4.1.0" />
         <PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
+        <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="96.0.4664.4500" />
         <PackageReference Include="SeleniumWebDriverExtensions" Version="1.0.3" />
     </ItemGroup>
 
