--- a/selenium/selenium.csproj
+++ b/selenium/selenium.csproj
@@ -26,6 +26,7 @@
         <PackageReference Include="Selenium.WebDriver" Version="4.1.0" />
         <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="96.0.4664.4500" />
         <PackageReference Include="SeleniumWebDriverExtensions" Version="1.0.3" />
+        <PackageReference Include="Syroot.Windows.IO.KnownFolders" Version="1.2.3" />
     </ItemGroup>
 
 </Project>
