Rename project and solution
selenium -> Selemium

--- a/Selenium/Selenium.csproj
+++ b/Selenium/Selenium.csproj
@@ -5,6 +5,8 @@
         <Nullable>disable</Nullable>
 
         <IsPackable>false</IsPackable>
+
+        <RootNamespace>Selenium</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
